Changes to add job creation API
